--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 
 
         <div class="container">
-            <p id="intro">Drum</p>
+            <p id="intro">Drum</p>  
+            <p id="stepsSequence_0"></p>
+            <p id="stepsSequence_1"></p>
+            <p id="stepsSequence_2"></p>
+            <p id="stepsSequence_3"></p>
             <button type="button" onclick="beat()" class="btn btn-dark">Beat</button>
             <button type="button" onclick="sequence()" class="btn btn-dark">Sequence</button>
-            <p id="stepsSequence"></p>
         </div>
     
 
