--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         <div class="container">
             <p id="intro">Drum</p>  
-            <p id="stepsSequence_0"></p>
-            <p id="stepsSequence_1"></p>
-            <p id="stepsSequence_2"></p>
-            <p id="stepsSequence_3"></p>
+            <p id="snare"></p>
+            <p id="clap"></p>
+            <p id="cowbell"></p>
+            <p id="kick"></p>
             <button type="button" onclick="beat()" class="btn btn-dark">Beat</button>
             <button type="button" onclick="sequence()" class="btn btn-dark">Sequence</button>
         </div>
